회원가입 완 & 리덕스,값저장 전;

--- a/package.json
+++ b/package.json
@@ -13,11 +13,16 @@
     "@react-navigation/bottom-tabs": "^6.2.0",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.4.1",
+    "@reduxjs/toolkit": "^1.7.2",
+    "axios": "^0.25.0",
     "react": "17.0.2",
     "react-native": "0.67.2",
+    "react-native-config": "^1.4.5",
+    "react-native-encrypted-storage": "^4.0.2",
     "react-native-keyboard-aware-scrollview": "^2.1.0",
     "react-native-safe-area-context": "^3.3.2",
-    "react-native-screens": "^3.10.2"
+    "react-native-screens": "^3.10.2",
+    "react-redux": "^7.2.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
